# scriptAgent

./: .dockerignore  .env.example  .env.production.example  .gitignore  CHANGELOG.md  DEPLOY_ALIYUN_ECS.md  Dockerfile  README.md  docker-compose.monitoring.yml  docker-compose.prod.yml  enterprise-blueprint-v1.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
deploy/: deploy_remote.sh  release.sh
docs/: MONITORING.md  architecture.mmd  architecture_prompt_for_gemini.md
examples/: a2a_protocol_example.py  kafka_async_example.py  mcp_server_example.py
monitoring/prometheus/: prometheus.yml
script_agent/: __init__.py  main.py
script_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
script_agent/agents/: __init__.py  base.py  intent_agent.py  orchestrator.py  product_agent.py  profile_agent.py  quality_agent.py  script_agent.py
script_agent/api/: app.py  auth.py
script_agent/config/: settings.py
script_agent/context/: __init__.py  session_compressor.py  system_context.py
script_agent/models/: __init__.py  context.py  evaluation.py  message.py  state_machine.py
script_agent/observability/: __init__.py  metrics.py  tracing.py
script_agent/protocols/: __init__.py  a2a_protocol.py  mcp_server.py
script_agent/services/: __init__.py  checkpoint_store.py  concurrency.py  kafka_queue.py  (+6 more)
tests/: test_agents.py  test_api_real_llm_e2e.py  test_auth_and_history_features.py  test_domain_data_integration.py  test_frontend_e2e.py  test_llm_client_reliability.py  test_monitoring_metrics.py  test_settings.py
(+15 files in other folders)
